# pyproject-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .cookiecutter.yaml  .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/{{ cookiecutter.python_slug }}/: example.py
